feat: Enhance PWA support and Gemini service
Adds PWA metadata for better offline support and app-like experience.

Improves Gemini service error handling for more user-friendly messages and refines API key handling.

Updates Dashboard component with new icons and loading states for enhanced user interaction.

Refactors Vite and Vercel configurations for improved build performance and deployment.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eunoia | Sanctuary of Self</title>
+    <meta name="description" content="A mystical sanctuary for self-discovery and depth psychology insights.">
+    <meta name="theme-color" content="#7c3aed">
+    <link rel="manifest" href="/metadata.json" />
+    <link rel="apple-touch-icon" href="/metadata.json" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +41,6 @@
       }
     </script>
     <style>
-      /* Custom scrollbar for modern feel */
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -52,6 +56,9 @@
       }
       .dark ::-webkit-scrollbar-thumb {
         background: #334155;
+      }
+      body {
+        overscroll-behavior-y: none;
       }
     </style>
   <script type="importmap">
